@@ -1,15 +1,10 @@
 package be.uliege.speam.team03.MDTools.services;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.mail.MailException;
 import org.springframework.stereotype.Service;
 
 import be.uliege.speam.team03.MDTools.DTOs.UserDto;
 import be.uliege.speam.team03.MDTools.exception.ResourceNotFoundException;
-import be.uliege.speam.team03.MDTools.exception.UserAlreadyExistsException;
 import be.uliege.speam.team03.MDTools.mapper.UserMapper;
 import be.uliege.speam.team03.MDTools.models.User;
 import be.uliege.speam.team03.MDTools.repositories.UserRepository;
@@ -20,25 +15,16 @@ import lombok.AllArgsConstructor;
 public class UserService {
    private final UserRepository userRepository;
 
-   public UserDto createUser(UserDto userDto) throws MailException, UserAlreadyExistsException {
-      if (userRepository.findByEmail(userDto.getEmail()).isPresent()) {
-         throw new UserAlreadyExistsException("User with email " + userDto.getEmail() + " already exists.");
-      }
-      User user = UserMapper.mapToUser(userDto);
-      User savedUser = userRepository.save(user);
-      return UserMapper.mapToUserDto(savedUser);
-   }
-
    public UserDto getUserByEmail(String email) {
       User user = userRepository.findByEmail(email)
             .orElseThrow(() -> new ResourceNotFoundException("User does not exist. Received email: " + email));
-      return UserMapper.mapToUserDto(user);
+      return UserMapper.toDto(user);
    }
 
    public UserDto getUserById(Long userId) {
       User user = userRepository.findById(userId)
             .orElseThrow(() -> new ResourceNotFoundException("User does not exist. Received ID: " + userId));
-      return UserMapper.mapToUserDto(user);
+      return UserMapper.toDto(user);
    }
 
    /**
@@ -49,23 +35,14 @@ public class UserService {
     */
    public List<UserDto> getAllUsers() {
       List<User> users = userRepository.findAll();
-      return users.stream().map(UserMapper::mapToUserDto).collect(Collectors.toList());
+      return users.stream().map(UserMapper::toDto).toList();
    }
 
-   public void updatePassword(Long userId, String password) {
-      User user = userRepository.findById(userId)
+   public UserDto updateUserRoles(Long userId, List<String> roles) {
+      User userToUpdate = userRepository.findById(userId)
             .orElseThrow(() -> new ResourceNotFoundException("User does not exist. Received ID: " + userId));
-      user.setPassword(password);
-      userRepository.save(user);
+      userToUpdate.setAuthorities(UserMapper.toAuthorities(roles));
+      userRepository.save(userToUpdate);
+      return UserMapper.toDto(userToUpdate);
    }
-
-   public User setResetToken(String email, String resetToken, LocalDateTime resetTokenExpiration) {
-      User user = userRepository.findByEmail(email)
-            .orElseThrow(() -> new ResourceNotFoundException("User does not exist. Received email: " + email));
-      user.setResetToken(resetToken);
-      user.setResetTokenExpiration(resetTokenExpiration);
-      userRepository.save(user);
-      return user;
-   }
-
 }
